[package]
# 
name = "guessing_gametestxyf"
version = "0.1.0"
authors = ["123 <you123@qq.com>"]
edition = "2022"
description = "cargo publish test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"